[package]
name = "aoc2019"
version = "0.0.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
float_eq = "1"
itertools = "0.13.0"
pico-args = "0.5.0"
ordered-float = "4"
pathfinding = "4.9.1"
rand = "0.8.5"
num = "0.4.2"
regex = "1.10.4"

[profile.release]
debug = true
